[package]
name = "tracing-panic"
version = "0.1.3"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/LukeMathWalker/tracing-panic"
description = "A panic hook that captures panic information as a tracing event"
keywords = ["logging", "tracing", "panic", "telemetry", "hook"]
categories = ["development-tools::debugging"]

[features]
default = ["capture-backtrace"]
capture-backtrace = []

[dependencies]
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
